<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.skijumpingquiz.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/skijumping" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/header1"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/header2"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/subhead1"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="#B3ffffff"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/architects_daughter"
                    android:text="@string/rules_head"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="20sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="10dp"
                android:background="#B3ffffff"
                android:orientation="vertical"
                android:padding="3dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:padding="6dp"
                    android:text="@string/rule1"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:padding="6dp"
                    android:text="@string/rule2"
                    android:textColor="#000000"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="#B3ffffff"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/architects_daughter"
                    android:text="@string/questions_head"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="20sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="#B3ffffff"
                android:orientation="vertical"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/question1_text"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/q1_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question1_answer1" />

                <CheckBox
                    android:id="@+id/q1_a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question1_answer2" />

                <CheckBox
                    android:id="@+id/q1_a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question1_answer3" />

                <CheckBox
                    android:id="@+id/q1_a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question1_answer4" />

                <CheckBox
                    android:id="@+id/q1_a5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question1_answer5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="#B3ffffff"
                android:orientation="vertical"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/question2_text"
                    android:textColor="#000000"
                    android:textSize="15sp" />


                <RadioGroup
                    android:id="@+id/q2_radiogroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q2_a1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/question2_answer1" />

                    <RadioButton
                        android:id="@+id/q2_a2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/question2_answer2" />

                    <RadioButton
                        android:id="@+id/q2_a3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/question2_answer3" />

                    <RadioButton
                        android:id="@+id/q2_a4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/question2_answer4" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="#B3ffffff"
                android:orientation="vertical"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/question3_text"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/q3_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question3_answer1" />

                <CheckBox
                    android:id="@+id/q3_a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question3_answer2" />

                <CheckBox
                    android:id="@+id/q3_a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question3_answer3" />

                <CheckBox
                    android:id="@+id/q3_a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question3_answer4" />

                <CheckBox
                    android:id="@+id/q3_a5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question3_answer5" />

                <CheckBox
                    android:id="@+id/q3_a6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question3_answer6" />

                <CheckBox
                    android:id="@+id/q3_a7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question3_answer7" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="#B3ffffff"
                android:orientation="vertical"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/question4_text1"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/wc_winner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/question4_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/question4_text2"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/wc_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/question4_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="#B3ffffff"
                android:orientation="vertical"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/question5_text"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/q5_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question5_answer1" />

                <CheckBox
                    android:id="@+id/q5_a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question5_answer2" />

                <CheckBox
                    android:id="@+id/q5_a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question5_answer3" />

                <CheckBox
                    android:id="@+id/q5_a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question5_answer4" />

                <CheckBox
                    android:id="@+id/q5_a5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question5_answer5" />

                <CheckBox
                    android:id="@+id/q5_a6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question5_answer6" />

                <CheckBox
                    android:id="@+id/q5_a7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/question5_answer7" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="#B3ffffff"
                android:orientation="vertical"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/question6_text"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <RadioGroup
                    android:id="@+id/q6_radiogroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q6_a1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/question6_answer1" />

                    <RadioButton
                        android:id="@+id/q6_a2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/question6_answer2" />

                    <RadioButton
                        android:id="@+id/q6_a3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/question6_answer3" />

                    <RadioButton
                        android:id="@+id/q6_a4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/question6_answer4" />

                </RadioGroup>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:onClick="finishQuiz"
                android:text="@string/finish_button" />


        </LinearLayout>


    </ScrollView>


</RelativeLayout>
